src/objects/GOTV_Email_Recipients__c.object
<CustomObject>
    <fields>
        <fullName>Default__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Default</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PlanType__c</fullName>
        <label>PlanType</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>GOTV_Email_Recipients</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>GOTV Email Recipients</label>
    <nameField>
        <label>GOTV Email Recipients Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>GOTV Email Recipients</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>